--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
+    "axios": "^0.27.2",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
