--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
