--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/vue": "^1.0.6",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
