--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.4.1",
+    "axios": "^1.3.4",
+    "moment": "^2.29.4",
     "nuxt": "^3.2.2",
     "nuxt-icon": "^0.3.2"
   }
