--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm run build
+        run: npm run build -- --host jedymatt.dev --base /mystery-fruits-js/
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
