--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/mystery-fruits-js/(.*)",
-      "destination": "/index.html"
+      "destination": "/mystery-fruits-js/index.html"
     }
   ]
 }
