Update vercel.json with redirects for mystery-fruits-js

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
- "rewrites": [
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "/mystery-fruits-js"
+    }
+  ],
+  "rewrites": [
     {
       "source": "/mystery-fruits-js/:match*",
       "destination": "/mystery-fruits-js/:match*"
     }
- ]
+  ]
 }
