--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "/mystery-fruits-js"
+      "destination": "/mystery-fruits-js/"
     }
   ],
   "rewrites": [
