--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
   "name": "mystery-fruits-js",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint --fix ."
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.6",
     "axios": "^0.27.2",
+    "lucide-vue-next": "^0.563.0",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^5.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.4",
+    "@eslint/js": "^9.39.2",
+    "@vitejs/plugin-vue": "^6.0.4",
     "autoprefixer": "^10.4.23",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
+    "globals": "^17.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "vite": "^2.9.18"
+    "vite": "^7.3.1"
   }
 }
