--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
+    "type-check": "vue-tsc --noEmit",
     "lint": "eslint --fix ."
   },
   "dependencies": {
@@ -19,11 +20,15 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^6.0.4",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.7.0",
     "globals": "^17.3.0",
     "tailwindcss": "^4",
-    "vite": "^7.3.1"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0",
+    "vite": "^7.3.1",
+    "vue-tsc": "^3.2.4"
   }
 }
