--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "date-fns": "^4.1.0",
     "lucide-vue-next": "^0.563.0",
     "nuxt": "^4.3.1",
@@ -18,9 +19,14 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@tailwindcss/vite": "^4.1.18",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
+    "globals": "^17.3.0",
     "tailwindcss": "4",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0",
     "vue-tsc": "^3.2.4"
   }
 }
